front page ui changed

--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,5 @@
 # EMAIL_USER="ag952006@student.nitw.ac.in"
 # EMAIL_PASS="Iitjee2020@2024"
 
-MONGO_URI = mongodb+srv://travelwithvistaraft:TwoBrothers%40vistaraft@cluster0.rxo3k.mongodb.net/
+MONGO_URI = mongodb+srv://anuragdemo:anuragdemo@cluster0.rxo3k.mongodb.net/
 PORT = 5000
