--- a/vistaraft/package.json
+++ b/vistaraft/package.json
@@ -17,11 +17,15 @@
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-odometerjs": "^3.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.2",
+    "react-scroll-trigger": "^0.6.14",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
