--- a/vistaraft/package.json
+++ b/vistaraft/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.2",
     "react-scroll-trigger": "^0.6.14",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
